# ISEE-MSCAN-ReID

./: CMakeLists.txt  Makefile  README.md
include/: .isee_mscan_reid.hpp.swp  attributes.h  isee_mscan_reid.hpp  jni_isee_mscan_reid.h
jni/: CMakeLists.txt  jni_isee_mscan_reid.cpp
src/: README.md  isee_mscan_reid.cpp
test/: Makefile  main.cpp
test/models/: README.md
